# gmrf_gas_mapping

./: CMakeLists.txt  README.md  package.xml
include/gmrf_gas_mapping/: gmrf_map.h  gmrf_node.h  gmrf_simple_publisher.hpp
launch/: gmrf_gas_mapping.launch  gmrf_launch.py  gmrf_params.yaml
maps/: empty_map.pgm  empty_map.yaml
scripts/: plot_GMRF_cell_connections.m
src/: gmrf_map.cpp  gmrf_map.h  gmrf_node.cpp  gmrf_node.h  gmrf_simple_publisher.cpp
