<package>
  <name>gmrf_gas_mapping</name>
  <version>0.0.0</version>
  <description>Implementation of the Time-Variant gas distribution mapping using Gaussian Markov Random Fields
               See: http://mapir.isa.uma.es/mapirwebsite/index.php/mapir-downloads/papers/193</description>
  <maintainer email="jgmonroy@uma.es">Javier G Monroy</maintainer>

  <license>GPLv3</license>

  <url type="website">http://www.ros.org</url>

  <author>Javier G. Monroy</author>  

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  
  
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>olfaction_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>eigen</run_depend>


</package>
