<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gmrf_gas_mapping</name>
  <version>0.0.0</version>
  <description>Implementation of the Time-Variant gas distribution mapping using Gaussian Markov Random Fields
               See: http://mapir.isa.uma.es/jgmonroy/papers/2015_GDM_TimeVariant_Obstacles_AutonomousRobots.pdf</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <license>GPLv3</license>
  <author>Javier Monroy</author>  

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>Eigen3</build_depend>
  
  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>olfaction_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  
  <exec_depend>eigen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
